remove node-triton

--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "lint": "belly-button --fix"
   },
   "dependencies": {
+    "apr-map": "^1.0.5",
     "boom": "^7.1.1",
     "bounce": "^1.2.0",
-    "bunyan": "^1.8.12",
     "force-array": "^3.1.0",
     "graphi": "^5.2.0",
     "graphql-tools": "^2.6.1",
     "hasha": "^3.0.0",
-    "triton": "^5.4.0",
+    "reach": "^1.0.0",
     "wreck": "^14.0.2"
   },
   "devDependencies": {
@@ -31,6 +31,7 @@
     "graphql-voyager": "^1.0.0-rc.9",
     "hapi": "^17.2.0",
     "inert": "^5.0.1",
+    "minio-proto-auth": "^1.1.0",
     "nodemon": "^1.12.1"
   },
   "nodemonConfig": {
