--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "boom": "^7.1.1",
     "bounce": "^1.2.0",
     "force-array": "^3.1.0",
+    "fwrule": "^1.4.1",
     "graphi": "^5.2.0",
     "graphql-tools": "^2.6.1",
     "hasha": "^3.0.0",
