--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apr-map": "^1.0.5",
     "boom": "^7.1.1",
     "bounce": "^1.2.0",
+    "constant-case": "^2.0.0",
     "force-array": "^3.1.0",
     "fwrule": "^1.4.1",
     "graphi": "^5.2.0",
