--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloudapi-gql",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "license": "MPL-2.0",
   "repository": "github:yldio/joyent-portal",
   "main": "lib",
@@ -22,6 +22,7 @@
     "graphi": "^5.2.0",
     "graphql-tools": "^2.6.1",
     "hasha": "^3.0.0",
+    "random-int": "^1.0.0",
     "reach": "^1.0.0",
     "wreck": "^14.0.2"
   },
