--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "graphdoc": "graphdoc -s ./lib/schema.graphql -o ./doc --force",
     "lint": "belly-button --fix",
     "pretest": "npm run lint",
-    "test": "lab -c"
+    "test": "lab -c --coverage-path lib"
   },
   "dependencies": {
     "apr-map": "3.x.x",
