--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "graphdoc": "graphdoc -s ./lib/schema.graphql -o ./doc --force",
     "lint": "belly-button --fix",
     "pretest": "npm run lint",
-    "test": "lab -c --coverage-path lib -a code"
+    "test": "lab -t 76 --coverage-path lib -a code"
   },
   "dependencies": {
     "apr-map": "3.x.x",
     "boom": "7.x.x",
-    "bounce": "^1.x.x",
+    "bounce": "1.x.x",
     "force-array": "3.1.x",
     "fwrule": "1.4.x",
     "graphi": "5.x.x",
@@ -33,7 +33,7 @@
     "code": "5.x.x",
     "graphql-faker": "1.x.x",
     "graphql-playground-html": "1.x.x",
-    "graphql-voyager": "1.0.0-rc.12",
+    "graphql-voyager": "1.0.0-rc.15",
     "hapi": "17.x.x",
     "inert": "5.x.x",
     "lab": "15.x.x",
