--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "boom": "7.x.x",
     "bounce": "1.x.x",
     "force-array": "3.1.x",
-    "fwrule": "1.4.x",
+    "fwrule": "2.x.x",
     "graphi": "5.x.x",
     "hasha": "3.0.x",
     "lodash.uniq": "4.5.x",
