--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "apr-map": "3.x.x",
     "boom": "7.x.x",
     "bounce": "1.x.x",
-    "cloudapi-client": "1.x.x",
+    "webconsole-cloudapi-client": "1.x.x",
     "force-array": "3.1.x",
     "fwrule": "2.x.x",
     "graphi": "5.x.x",
